fix: clip blurring outside borders

--- a/components/ImageCards/image-card.module.scss
+++ b/components/ImageCards/image-card.module.scss
@@ -12,6 +12,7 @@ $IMAGE-CARD--BORDER-RADIUS: 8px;
 .image-container {
     display: block;
     object-fit: scale-down;
+    overflow: clip;
     width: 100%;
 }
 
